added message of record

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
   </head>
   <body>
     <div class="game">
-      <button id="btn">START</button>
-      <div id="timer"><time>00:00:00</time></div>
+      <div class="controlPanel">
+        <div class="navigation">
+          <button id="btn">START</button>
+          <div id="timer"><time>00:00:00</time></div>
+        </div>
+        <div id="message"></div>
+      </div>
       <div class="game_field" id="field">
         <div class="platform" id="platform"></div>
         <div class="ball" id="ball"></div>
